# hope

./: .gitignore  CLAUDE.md  README.md  analyze_reward.py  findings.md  research-log.md  test_selective_thinking.py  test_thinking.py  train_pause_gpt.py  train_phase2_rpt.py  train_thinking_gpt.py
archive/dreamlora/: PROPOSAL.md  findings.md  pyproject.toml  research-state.yaml
archive/dreamlora/configs/: base.yaml  phase1_5_cms.yaml
archive/dreamlora/experiments/: LOG.md  exp13_gated_adapter.py  exp14_multiuser.py  exp17_stacked.py  exp1_data.py  exp1_run.py  exp21_ablation.json  exp22_data.py  exp22_run.py  exp23_cms_adapter.py  exp24_two_phase.py  exp26_data.py  exp26_novel_2b.py  exp26b_more_steps.py  exp26c_diverse_dreams.py  exp26d_5dreams.py  exp26e_focused.py  exp26f_4b.py  exp2_analysis.md  exp3_run.py  exp4_data.py  exp4b_data.py  exp6_run.py  exp6b_run.py  next_ideas.md
archive/dreamlora/experiments/exp11_results/: baseline.json  summary.json
archive/dreamlora/experiments/exp12_results/: summary.json
archive/dreamlora/experiments/exp13_results/: summary.json
archive/dreamlora/experiments/exp14_results/: baseline.json  summary.json
archive/dreamlora/experiments/exp15_results/: baseline.json  summary.json
archive/dreamlora/experiments/exp16_results/: summary.json
archive/dreamlora/experiments/exp17_results/: summary.json
archive/dreamlora/scripts/: run_phase1.py
archive/dreamlora/tests/: test_cms_trainer.py  test_dream_generator.py
archive/dreamlora/to_human/: progress_report_exp11.md  progress_report_exp17.md
(+339 files in other folders)
